{
  "version": 4,
  "terraform_version": "1.13.5",
  "serial": 11,
  "lineage": "60d20b4e-a3f8-2c8c-3a4d-c25ef41d3c21",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d522111979520819",
            "arn": "arn:aws:ec2:eu-north-1:458085215591:elastic-ip/eipalloc-0d522111979520819",
            "association_id": "eipassoc-0bd8055dc23b69f78",
            "domain": "vpc",
            "id": "eipalloc-0d522111979520819",
            "instance": "i-098958dea866e86c9",
            "network_border_group": "eu-north-1",
            "network_interface": "eni-0c00dd259b0ed956c",
            "private_dns": "ip-10-0-1-126.eu-north-1.compute.internal",
            "private_ip": "10.0.1.126",
            "public_dns": "ec2-13-63-95-38.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.63.95.38",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "trackit-eip"
            },
            "tags_all": {
              "Name": "trackit-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.main",
            "aws_security_group.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09a9858973b288bdd",
            "arn": "arn:aws:ec2:eu-north-1:458085215591:instance/i-098958dea866e86c9",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-098958dea866e86c9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "trackit-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c00dd259b0ed956c",
            "private_dns": "ip-10-0-1-126.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.126",
            "public_dns": "ec2-13-60-70-109.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.60.70.109",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0b8d3f8c970efdfef",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0573433c03eee62c0",
            "tags": {
              "Name": "trackit-server"
            },
            "tags_all": {
              "Name": "trackit-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-097f627b91f7c90b2"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:458085215591:internet-gateway/igw-06da1a498382e7cd7",
            "id": "igw-06da1a498382e7cd7",
            "owner_id": "458085215591",
            "tags": {
              "Name": "trackit-igw"
            },
            "tags_all": {
              "Name": "trackit-igw"
            },
            "vpc_id": "vpc-050db553aa7f1243f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:458085215591:route-table/rtb-0072a8c5b00412816",
            "id": "rtb-0072a8c5b00412816",
            "owner_id": "458085215591",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06da1a498382e7cd7",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "trackit-public-rt"
            },
            "tags_all": {
              "Name": "trackit-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-050db553aa7f1243f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07db39518b4a81d90",
            "route_table_id": "rtb-0072a8c5b00412816",
            "subnet_id": "subnet-0573433c03eee62c0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:458085215591:security-group/sg-097f627b91f7c90b2",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-097f627b91f7c90b2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "trackit-sg",
            "name_prefix": "",
            "owner_id": "458085215591",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "trackit-sg"
            },
            "tags_all": {
              "Name": "trackit-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-050db553aa7f1243f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:458085215591:subnet/subnet-0573433c03eee62c0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0573433c03eee62c0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "458085215591",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "trackit-public-subnet"
            },
            "tags_all": {
              "Name": "trackit-public-subnet"
            },
            "vpc_id": "vpc-050db553aa7f1243f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:458085215591:vpc/vpc-050db553aa7f1243f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-045cf25a801c04972",
            "default_route_table_id": "rtb-0fb82f796e5a9abd1",
            "default_security_group_id": "sg-098a3403a94ef7559",
            "dhcp_options_id": "dopt-03547579a968ab58a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-050db553aa7f1243f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fb82f796e5a9abd1",
            "owner_id": "458085215591",
            "tags": {
              "Name": "trackit-vpc"
            },
            "tags_all": {
              "Name": "trackit-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}